@@ -1,5 +1,8 @@
 2002-02-25  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* usecode/ucsched.cc (Usecode_script): Handle sched. opcode 0x29:
+	Wait nn game hours.
+
 	* palettes.h: Define palette names here.
 	* tools/ipack.cc (public): Algorithmically create 
 	palettes 1-10 used by the Exult engine.
